Stamps Collection 26.9.1
* Desktop application prototype
* Backend API updates based on desktop requirements
